docs/apache-airflow-providers-amazon/8.29.0/_sources/_api/airflow/providers/amazon/aws/operators/glue_crawler/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.operators.glue_crawler`
=============================================================

.. py:module:: airflow.providers.amazon.aws.operators.glue_crawler


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.operators.glue_crawler.GlueCrawlerOperator




.. py:class:: GlueCrawlerOperator(config, poll_interval = 5, wait_for_completion = True, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)


   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.glue_crawler.GlueCrawlerHook`\ ]

   Creates, updates and triggers an AWS Glue Crawler.

   AWS Glue Crawler is a serverless service that manages a catalog of
   metadata tables that contain the inferred schema, format and data
   types of data stores within the AWS cloud.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:GlueCrawlerOperator`

   :param config: Configurations for the AWS Glue crawler
   :param poll_interval: Time (in seconds) to wait between two consecutive calls to check crawler status
   :param wait_for_completion: Whether to wait for crawl execution completion. (default: True)
   :param deferrable: If True, the operator will wait asynchronously for the crawl to complete.
       This implies waiting for completion. This mode requires aiobotocore module to be installed.
       (default: False)
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html

   .. py:attribute:: aws_hook_class

      

   .. py:attribute:: template_fields
      :type: Sequence[str]

      

   .. py:attribute:: ui_color
      :value: '#ededed'

      

   .. py:method:: execute(context)

      Execute AWS Glue Crawler from Airflow.

      :return: the name of the current glue crawler.


   .. py:method:: execute_complete(context, event = None)



